fix(modal): remove overflow-y: auto

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -91,7 +91,6 @@
 
   .bx--modal-content {
     margin-bottom: rem(48px);
-    overflow-y: auto;
 
     > * {
       @include reset;
